# BOSS

anchor/staking-game-anchor/: Anchor.toml
anchor/staking-game-anchor/programs/staking-game-anchor/: Cargo.toml
anchor/staking-game-anchor/programs/staking-game-anchor/src/: errors.rs  lib.rs  state.rs
anchor/staking-game-anchor/programs/staking-game-anchor/src/accounts/: claim_rewards.rs  initialize_pool.rs  intialize_pool.rs  join_pool.rs  mod.rs  submit_score.rs
anchor/staking-game-anchor/programs/staking-game-anchor/src/instructions/: claim_reward.rs  initialize_pool.rs  join_pool.rs  mod.rs  submit_score.rs
anchor/staking-game-anchor/tests/: staking-game-anchor.js
